# chatbot-langchain

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml
app/: urls.py  views.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/chatbot/: index.html
chatbot_langchain/: settings.py  wsgi.py
